--- a/style.css
+++ b/style.css
@@ -33,7 +33,6 @@ body{
   
 h2{
     text-align: center;
-    margin-top: 200px;
     font-size: xx-large;
 }
 p{
@@ -52,6 +51,28 @@ p{
     margin-left: 15px;
   }
 .box1:hover{
-    border: 3px solid red;
-    background-color: rgb(237, 205, 211);
+    border: 3px solid rgb(13, 13, 14);
+    background-color: rgb(242, 203, 210);
+    width: 400px;
+}
+.other{
+    margin-top: 50px;
+    width: 450px;
+    margin-left: 35%;
+    border-bottom: 2px solid black;
+    text-align: center;
+}
+.button2{
+    text-decoration: none;
+    background-color: red;
+    padding: 10px 30px;
+    color: white;
+    font-weight: 600;
+    border-radius: 5px;
+    font-size: 50%;
+    margin-left: 45%;
+    font-size: large;
+}
+a:hover{
+    border: 4px solid rgb(144, 144, 225);
 }
